docs: 完善Java启动参数文档 [Sync from obsidian 51c5691]